@@ -1,3 +1,11 @@
+2010-11-04  Sergio Martin <sergio.martin@artica.es>
+
+	* lib/PandoraFMS/DB.pm
+	lib/PandoraFMS/Core.pm
+	util/pandora_manage.pl: Improved the policies
+	appliement with checks and the external
+	alerts addition
+
 2010-11-03  Ramon Novoa  <rnovoa@artica.es>
 
 	* lib/PandoraFMS/Tools.pm: limpia_cadena removes unwanted
